--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    body {
      font-family: 'Calibri', sans-serif;
      margin: 20px;
-     background-color: #fffde7;
+     background-color: #ffffff;
      color: #333;
    }
    h2 {
@@ -64,7 +64,7 @@
      display: flex;
      flex-wrap: wrap;
      gap: 10px;
-     background-color: #fff8c6;
+     background-color: #fefefe;
      padding: 10px;
      border: 1px solid #fbc02d;
      border-radius: 5px;
@@ -78,7 +78,7 @@
      align-items: center;
      gap: 5px;
      padding: 4px 8px;
-     background-color: #fffde7;
+     background-color: #ffffff;
      border: 1px solid #fbc02d;
      border-radius: 4px;
      cursor: pointer;
@@ -219,7 +219,7 @@
  }
  function processUploadedData() {
    if (!currentOrderKey) {
-     alert("No valid 'Order Number' column (Order Number, Order #, Site ID Number) found.");
+     alert("No valid 'Order Number' column found.");
      return;
    }
    const selectedColumns = {};
