--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
    "Custom Field 1", "Custom Field 2", "Custom Field 3", "Order Total",
    "Recipient", "Rate", "Service", "Tracking Number", "PO Reference Number"
  ];
- const orderKeyAliases = ["Order Number", "Order #", "Site ID Number"];
+ const orderKeyAliases = ["Order Number", "Order #", "Site ID Number", "Site Order ID"];
  let currentOrderKey = null;
  document.getElementById("fileInput").addEventListener("change", handleFile);
  document.getElementById("selectAll").addEventListener("change", function () {
